// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link component can be nested within Text and Heading 1`] = `
<div>
  <p
    class="c-jwkyIg c-jwkyIg-gvmVBy-size-md"
  >
    <a
      class="c-fbdNsg c-fbdNsg-gvmVBy-size-md"
    >
      TEXT LINK
    </a>
  </p>
  <h2
    class="c-hswVDG c-hswVDG-fOoUdm-size-md"
  >
    <a
      class="c-fbdNsg c-fbdNsg-gvmVBy-size-md"
    >
      HEADING LINK
    </a>
  </h2>
</div>
`;

exports[`Link component renders an anchor 1`] = `
<div>
  <a
    class="c-fbdNsg c-fbdNsg-gvmVBy-size-md"
    href="https://google.com/"
  >
    GOOGLE
  </a>
</div>
`;

exports[`Link component renders an large anchor 1`] = `
<div>
  <a
    class="c-fbdNsg c-fbdNsg-jvTRJO-size-lg"
    href="https://google.com/"
  >
    GOOGLE
  </a>
</div>
`;
